--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ng-zorro-antd": "^14.0.0",
     "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@schematics/angular": "^15.0.2",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
