--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.1.0",
     "@types/lodash": "^4.14.186",
     "ng-zorro-antd": "^14.0.0",
+    "ngx-image-zoom": "^1.0.1",
     "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
