--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@types/lodash": "^4.14.186",
     "ng-zorro-antd": "^14.0.0",
     "ngx-image-zoom": "^1.0.1",
-    "ngx-quill": "^20.0.1",
     "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
